# preflibtools

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  ex_instance.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  docs.yml  publish.yml  python-package.yml
docs/: .buildinfo  Makefile  about.html  conf.py  genindex.html  index.html  index.rst  installation.html  installation.rst  make.bat  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html  usage.rst
docs-source/: Makefile  make.bat
docs-source/source/: conf.py  index.rst
docs/.doctrees/: about.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_sources/: about.rst.txt  installation.rst.txt  usage.rst.txt
docs/_static/: documentation_options.js
docs/output/: .buildinfo  about.html  ex_categorical.html  ex_instance.html  ex_matching.html  ex_ordinal.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/reference/: index.html  index.rst  my_class_1.rst  my_class_2.rst  my_class_3.rst
docs/source/: about.rst  conf.py  ex_ordinal.rst  index.rst  installation.rst  usage.rst
preflibtools/: __init__.py
preflibtools/aggregation/: __init__.py  multi_winner.py  single_winner.py  singlewinner.py  utilities.py  utils.py  votingrules.py
preflibtools/instances/: __init__.py  convert.py  dataset.py  preflibinstance.py  sampling.py  sanity.py
preflibtools/properties/: __init__.py  basic.py  decorators.py  distances.py  metrics.py  pairwisecomparisons.py  pq_trees.py  singlecrossing.py  singlepeakedness.py
preflibtools/sub_package_1/: my_class_1.py
preflibtools/sub_package_2/: my_class_2.py  my_class_3.py
tests/: __init__.py  instance.py  property.py  runningex.py  runningexample.py  test_aggregation.py  test_decorators.py  test_preflibtools.py  test_property.py
tests/aggregation/: test_multi_winner.py  test_single_winner.py  test_utilities.py
tests/instance/: test_categorical_handling.py  test_dataset.py  test_order_handling.py  test_sampling.py
tests/properties/: test_2_axes_sp.py  test_basic.py  test_decorators.py  test_distance.py  test_k_alt_deletion_sp.py  (+5 more)
(+164 files in other folders)
